src/components/ids-card/ids-card.scss
/* Ids Card Component */

.ids-card {
  background-color: var(--ids-card-color-background);
  border: 1px solid var(--ids-card-color-border);
  border-radius: var(--ids-card-border-radius);
  box-shadow: var(--ids-card-shadow);
  margin-block-end: var(--ids-card-margin-bottom);
  height: var(--ids-card-height);

  .ids-card-content {
    height: var(--ids-card-content-height);
    overflow: auto;
    width: 100%;

    &.overflow-hidden {
      overflow: hidden;
    }

    &.has-checkbox {
      padding-inline-start: 50px;
    }

    &.has-data-grid {
      overflow: hidden;

      ::slotted([slot="card-content"]) {
        height: 100%;
      }
    }
  }

  &.shadowed {
    border: 1px solid transparent;
  }

  &-checkbox {
    position: absolute;
    display: flex;
    top: 0;
    left: 0;
    bottom: 0;
    width: 50px;
    align-items: center;
    justify-content: center;
  }

  &.is-selectable {
    cursor: var(--ids-cursor-pointer);
  }

  &.is-selected {
    background-color: var(--ids-card-color-background-selected);
    outline: 2px solid var(--ids-card-color-border-selected);
    outline-offset: -1px;
  }

  .hidden {
    display: none;
  }
}

// Header Area
.ids-card-header {
  align-items: center;
  color: var(--ids-card-header-title-color);
  display: flex;
  padding-inline-start: var(--ids-card-header-padding-inline-start);
  padding-inline-end: var(--ids-card-header-padding-inline-start);
  height: var(--ids-card-header-height);
}

::slotted([slot='card-header']) {
  display: flex;
  align-items: center;
  position: relative;
  width: 100%;
}

:host([no-header]) {
  .ids-card-header {
    display: none;
  }
}

:host([shadowed]) {
  .ids-card {
    border: 1px solid var(--ids-box-shadowed-color-border);
  }
}

// Footer Area
.ids-card-footer {
  padding: 6px 0 0;
  display: none;
  bottom: 0;
  border-top: 1px solid var(--ids-card-divider-color-border);
  width: 100%;

  &.no-padding {
    padding: 0;
  }
}

.has-footer {
  .ids-card-content {
    height: 260px;
  }

  .ids-card-footer {
    display: block;
  }
}

// Adjust the width/height to parent fit
:host([auto-fit]) {
  .ids-card {
    box-sizing: border-box;
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: auto;

    .ids-card-content {
      height: unset;
    }
  }
}

// Adjust the heights with settings
:host([auto-height]) {
  .ids-card {
    min-height: auto;
    height: auto;

    .ids-card-content {
      height: auto;
    }

    ids-button,
    ids-hyperlink {
      height: auto;
    }

    ids-button::part(button),
    ids-hyperlink::part(link) {
      height: auto;
    }
  }
}

:host([borderless]) {
  .ids-card {
    border-color: transparent;
    box-shadow: none;
  }
}

// Actionable Link Card Styles
:host([actionable]) ids-hyperlink {
  height: 50px;

  &::part(link) {
    box-sizing: border-box;
    border: none;
    color: var(--ids-card-color-text-default);
    display: flex;
    margin: 0;
    padding: 0;
    text-align: center;
    text-decoration: none;
    width: 100%;
    white-space: normal;

    &:hover {
      color: var(--ids-card-color-text-hover);
    }
  }
}

:host {
  .flex-content,
  ::slotted(.flex-content) {
    display: flex;
    align-items: center;
    padding: 15px 16px;
    gap: 16px;
  }
}

// Handle Actionable
:host([actionable]) .ids-card {
  contain: unset;
  height: auto;
  transition: var(--ids-motion-duration) var(--ids-motion-ease);

  &:hover {
    border: 1px solid var(--ids-card-color-border-hover);
  }

  &:not(.hide-focus):focus-within {
    border: 1px solid var(--ids-card-color-border-focus);
    box-shadow: var(--ids-shadow-30);
  }

  ::slotted([slot='card-content']) {
    pointer-events: none;
    width: 100%;
  }

  ids-button {
    align-items: center;
    height: 50px;
    width: 100%;
  }

  ids-hyperlink::part(link),
  ids-button::part(button) {
    align-items: center;
    border: 1px solid transparent;
    background-color: transparent;
    height: 50px;

    &:hover {
      background-color: transparent;
      color: var(--ids-button-tertiary-color-text-default);
    }
  }
}

// Style the title
.ids-card-body {
  width: 100%;
}

::slotted([slot='card-content'].fixed-height) {
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  height: inherit;
  justify-content: center;
  padding: 0 8px;
  text-align: center;
  width: 100%;
}

:host([actionable][height]) .ids-card {
  ids-hyperlink {
    height: inherit;
  }

  ids-hyperlink::part(link) {
    height: inherit;
  }

  ids-button {
    height: inherit;
  }

  ids-button::part(button) {
    height: inherit;
  }
}

